--- a/exercise1.html
+++ b/exercise1.html
@@ -17,7 +17,7 @@
       <!-- Row and Columns (Bootstrap Concept 2: Grid System) -->
       <div class="row">
         <!-- First Plant -->
-        <div class="col-md-4 text-center">
+        <div class="col-md-6 text-center">
           <img
             src="https://www.shutterstock.com/image-photo/indoor-house-pot-plants-potted-600nw-1747639997.jpg"
             class="img-fluid rounded"
@@ -29,7 +29,7 @@
         </div>
 
         <!-- Second Plant -->
-        <div class="col-md-4 text-center">
+        <div class="col-md-6 text-center">
           <img
             src="https://shop-static.arborday.org/media/0004367_snake-plant.jpeg"
             class="img-fluid rounded"
@@ -41,7 +41,7 @@
         </div>
 
         <!-- Third Plant -->
-        <div class="col-md-4 text-center">
+        <div class="col-md-6 text-center">
           <img
             src="https://media.houseandgarden.co.uk/photos/64677e9c55fc4e858e5b4d31/master/w_1600%2Cc_limit/492766473"
             class="img-fluid rounded"
@@ -52,6 +52,16 @@
           <p>Elegant flowers and thrives in shade!</p>
         </div>
       </div>
+       <!-- Fourth Plant -->
+      <div class="col-md-6 text-center">
+<img src="https://i.pinimg.com/736x/58/db/4b/58db4b8e2a0e71d28d85e29d7935f546.jpg"
+  class="img-fluid rounded"
+            alt="Lily"
+  style="width: 200px; height: 200px; object-fit: cover"
+          />
+          <h5 class="mt-3"> Lily</h5>
+          <p>my fav flower!</p>
+        
 
       <!-- Button (Bootstrap Concept 3: Components) -->
       <div class="text-center mt-4">
