--- a/exercise1.html
+++ b/exercise1.html
@@ -41,6 +41,7 @@
         </div>
 
         <!-- Third Plant -->
+        <div class="row">
         <div class="col-md-6 text-center">
           <img
             src="https://media.houseandgarden.co.uk/photos/64677e9c55fc4e858e5b4d31/master/w_1600%2Cc_limit/492766473"
@@ -61,12 +62,13 @@
           />
           <h5 class="mt-3"> Lily</h5>
           <p>my fav flower!</p>
+         </div>
+    </div>
         
 
       <!-- Button (Bootstrap Concept 3: Components) -->
       <div class="text-center mt-4">
         <button class="btn btn-success">See More Plants</button>
-      </div>
-    </div>
+     
   </body>
 </html>
