--- a/exercise1.html
+++ b/exercise1.html
@@ -15,7 +15,7 @@
       <h1 class="text-center mb-4">🌱 My Plant Gallery 🌱</h1>
 
       <!-- Row and Columns (Bootstrap Concept 2: Grid System) -->
-      <div class="row">
+   <div class="row">>
         <!-- First Plant -->
         <div class="col-md-6 text-center">
           <img
@@ -29,7 +29,7 @@
         </div>
 
         <!-- Second Plant -->
-        <div class="col-md-6 text-center">
+  <div class="col-md-6 text-center">
           <img
             src="https://shop-static.arborday.org/media/0004367_snake-plant.jpeg"
             class="img-fluid rounded"
@@ -38,8 +38,8 @@
           />
           <h5 class="mt-3">Snake Plant</h5>
           <p>Hardy and great for indoor air purification.</p>
-        </div>
-
+        </div
+ <div class="row">>
         <!-- Third Plant -->
         <div class="row">
         <div class="col-md-6 text-center">
