--- a/exercise1.html
+++ b/exercise1.html
@@ -3,21 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <title>Plant Gallery</title>
-    <!-- Bootstrap CSS link -->
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
   </head>
   <body>
-    <!-- Container (Bootstrap Concept 1: Layout using Container) -->
     <div class="container my-5">
       <h1 class="text-center mb-4">🌱 My Plant Gallery 🌱</h1>
 
-      <!-- Row and Columns (Bootstrap Concept 2: Grid System) -->
-   <div class="row">>
-        <!-- First Plant -->
-        <div class="col-md-6 text-center">
+      <!-- Row 1 -->
+      <div class="row">
+        <!-- Plant 1 -->
+        <div class="col-md-6 text-center mb-4">
           <img
             src="https://www.shutterstock.com/image-photo/indoor-house-pot-plants-potted-600nw-1747639997.jpg"
             class="img-fluid rounded"
@@ -28,47 +27,51 @@
           <p>Known for its healing properties and easy care!</p>
         </div>
 
-        <!-- Second Plant -->
-  <div class="col-md-6 text-center">
+        <!-- Plant 2 -->
+        <div class="col-md-6 text-center mb-4">
           <img
             src="https://shop-static.arborday.org/media/0004367_snake-plant.jpeg"
             class="img-fluid rounded"
             alt="Snake Plant"
-            style="width: 200px; height: 200px; object-fit: cover"
+            style="width: 300px; height: 300px; object-fit: cover"
           />
           <h5 class="mt-3">Snake Plant</h5>
           <p>Hardy and great for indoor air purification.</p>
-        </div
- <div class="row">>
-        <!-- Third Plant -->
-        <div class="row">
-        <div class="col-md-6 text-center">
+        </div>
+      </div>
+
+      <!-- Row 2 -->
+      <div class="row">
+        <!-- Plant 3 -->
+        <div class="col-md-6 text-center mb-4">
           <img
             src="https://media.houseandgarden.co.uk/photos/64677e9c55fc4e858e5b4d31/master/w_1600%2Cc_limit/492766473"
             class="img-fluid rounded"
             alt="Peace Lily"
-            style="width: 200px; height: 200px; object-fit: cover"
+            style="width: 300px; height: 300px; object-fit: cover"
           />
           <h5 class="mt-3">Peace Lily</h5>
           <p>Elegant flowers and thrives in shade!</p>
         </div>
-      </div>
-       <!-- Fourth Plant -->
-      <div class="col-md-6 text-center">
-<img src="https://i.pinimg.com/736x/58/db/4b/58db4b8e2a0e71d28d85e29d7935f546.jpg"
-  class="img-fluid rounded"
-            alt="Lily"
-  style="width: 200px; height: 200px; object-fit: cover"
-          />
-          <h5 class="mt-3"> Lily</h5>
-          <p>my fav flower!</p>
-         </div>
-    </div>
-        
 
-      <!-- Button (Bootstrap Concept 3: Components) -->
+        <!-- Plant 4 -->
+        <div class="col-md-6 text-center mb-4">
+          <img
+            src="https://i.pinimg.com/736x/58/db/4b/58db4b8e2a0e71d28d85e29d7935f546.jpg"
+            class="img-fluid rounded"
+            alt="Lily"
+            style="width: 300px; height: 300px; object-fit: cover"
+          />
+          <h5 class="mt-3">Lily</h5>
+          <p>My fav flower!</p>
+        </div>
+      </div>
+
+      <!-- Button -->
       <div class="text-center mt-4">
         <button class="btn btn-success">See More Plants</button>
-     
+      </div>
+    </div>
   </body>
 </html>
+
