--- a/ex2.html
+++ b/ex2.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Simple Calculator</title>
+  <!-- Link to external CSS file for styling (style.css) -->
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- Page heading -->
+  <h1>Simple Calculator</h1>
 
+  <!-- Input for the first number -->
+  <input type="number" id="num1" placeholder="First number">
+
+  <!-- Dropdown menu for selecting an arithmetic operator -->
+  <select id="operator">
+    <option value="+">+</option>     <!-- Addition -->
+    <option value="-">−</option>     <!-- Subtraction -->
+    <option value="*">×</option>     <!-- Multiplication -->
+    <option value="/">÷</option>     <!-- Division -->
+    <option value="%">%</option>     <!-- Modulus -->
+  </select>
+
+  <!-- Input for the second number -->
+  <input type="number" id="num2" placeholder="Second number">
+
+  <!-- Button to trigger the calculation function -->
+  <button onclick="calculate()">Calculate</button>
+
+  <!-- Paragraph to display the result -->
+  <p id="result"></p>
+
+  <!-- Link to the external JavaScript file (script.js) -->
+  <script src="script.js"></script>
+</body>
+</html>
