--- a/concatenation.html
+++ b/concatenation.html
@@ -1,36 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Simple Calculator</title>
-  <!-- Link to external CSS file for styling (style.css) -->
-  <link rel="stylesheet" href="style.css">
+  <title>Concatenation Example</title>
 </head>
 <body>
-  <!-- Page heading -->
-  <h1>Simple Calculator</h1>
 
-  <!-- Input for the first number -->
-  <input type="number" id="num1" placeholder="First number">
+  <h2>My Fun Sentence Using Concatenation</h2>
 
-  <!-- Dropdown menu for selecting an arithmetic operator -->
-  <select id="operator">
-    <option value="+">+</option>     <!-- Addition -->
-    <option value="-">−</option>     <!-- Subtraction -->
-    <option value="*">×</option>     <!-- Multiplication -->
-    <option value="/">÷</option>     <!-- Division -->
-    <option value="%">%</option>     <!-- Modulus -->
-  </select>
+  <!-- This paragraph will display the result -->
+  <p id="output"></p>
 
-  <!-- Input for the second number -->
-  <input type="number" id="num2" placeholder="Second number">
+  <script>
+    // Variables with parts of the sentence
+    var phraseStart = "How much I love to combine ";
+    var food = "instant soup";
+    var extra = " with lemon.";
 
-  <!-- Button to trigger the calculation function -->
-  <button onclick="calculate()">Calculate</button>
+    // Concatenate the parts together
+    var fullSentence = phraseStart + food + extra;
 
-  <!-- Paragraph to display the result -->
-  <p id="result"></p>
+    // Show the sentence on the page
+    document.getElementById("output").textContent = fullSentence;
+  </script>
 
-  <!-- Link to the external JavaScript file (script.js) -->
-  <script src="script.js"></script>
 </body>
 </html>
