--- a/concatenation.html
+++ b/concatenation.html
@@ -12,12 +12,12 @@
 
   <script>
     // Variables with parts of the sentence
-    var phraseStart = "How much I love to combine ";
-    var food = "instant soup";
-    var extra = " with lemon.";
+    var phraseStart = "How much I love listening to ";
+    var artist = "Daniel Caesar";
+    var weather = " while it's raining.";
 
     // Concatenate the parts together
-    var fullSentence = phraseStart + food + extra;
+    var fullSentence = phraseStart + artist + weather;
 
     // Show the sentence on the page
     document.getElementById("output").textContent = fullSentence;
@@ -25,3 +25,4 @@
 
 </body>
 </html>
+
