--- a/homepage/business.html
+++ b/homepage/business.html
@@ -2,9 +2,8 @@
 <html lang="en">
 
 <head>
- <!-- for the nav bars -->
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Kristi&display=swap" rel="stylesheet">
-  <!-- for the text box -->
   <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Kodchasan&family=Lado&display=swap" rel="stylesheet">
 
   <meta charset="UTF-8" />
@@ -19,37 +18,33 @@
 </head>
 
 <body>
+  <!-- Navigation -->
   <nav id="mainNav" style="background-color: #0000FF; padding: 10px; font-family: 'Kristi', cursive;">
     <a href="index.html" style="color: antiquewhite; margin-right: 20px; text-decoration: none;">Home</a>
     <a href="business.html" style="color: antiquewhite; text-decoration: none;">Business Page</a>
   </nav>
+
+  <!-- Toggle Button -->
   <button onclick="toggleNav()" style="margin: 10px;">^</button>
 
-
-
-
-  <div class="container mt-5">
+  <!-- Content Section -->
+  <div class="container-fluid mt-5">
     <div class="row">
-      <div class="col-md-6 text-box">
-        <div class="text-container" style="max-width: 400px; position: relative;">
-        <p>
-
-          <p> 
-          <p>  
-        
+      <div class="col-12 text-box">
+        <div class="text-container">
+          <p>
             <span class="vintage-vault">THE VINTAGE VAULT</span> is a digital platform that curates and sells
             <span class="high-quality">high-quality</span> vintage clothing for the modern generation. We connect fashion-forward individuals with timeless pieces, blending nostalgia with sustainability. Our mission is to make vintage fashion accessible, expressive, and eco-conscious.
           </p>
-        <img src="https://i.imgur.com/G7RqpHu.jpeg" alt="Leather Jacket" class="img1" />
+          <img src="https://i.imgur.com/G7RqpHu.jpeg" alt="Leather Jacket" class="img1" />
           <img src="https://i.imgur.com/uhRuHRC.jpeg" alt="Boot" class="img2" />
           <img src="https://i.imgur.com/WTz3fIo.jpeg" alt="Clothes" class="img3" />
         </div>
-
       </div>
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <!-- Script -->
   <script>
     function toggleNav() {
       var nav = document.getElementById("mainNav");
